WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102540
Checkerboard flicker when pinch zooming out on google.com/nwshp
https://bugs.webkit.org/show_bug.cgi?id=102540
Summary
Checkerboard flicker when pinch zooming out on google.com/nwshp
Adam Treat
Reported
2012-11-16 11:11:12 PST
This happens because the tile matrix is changing while the pinch zoom is continuing.
Attachments
Patch
(7.16 KB, patch)
2012-11-16 11:14 PST
,
Adam Treat
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Treat
Comment 1
2012-11-16 11:11:52 PST
I'm going to fix this by disabling updates to the backingstore tile matrix when backingstore updates are disabled. This will prevent changes to the tile matrix when we are in the middle of a pinch zoom which can cause checkebroard flickering.
Adam Treat
Comment 2
2012-11-16 11:14:36 PST
Created
attachment 174723
[details]
Patch
WebKit Review Bot
Comment 3
2012-11-16 13:01:36 PST
Comment on
attachment 174723
[details]
Patch Clearing flags on attachment: 174723 Committed
r134990
: <
http://trac.webkit.org/changeset/134990
>
WebKit Review Bot
Comment 4
2012-11-16 13:01:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug